chore(reporter): update Java syntax